# volumeicon

./: .gitignore  PKGBUILD  configure.ac
data/: Makefile.am
data/gui/: preferences.ui
src/: config.c  config.h  volumeicon.c
